Revert "Update transactional texts"

--- a/packages/backend-modules/mail/templates/membership_deactivated_abo_uncancelled.html
+++ b/packages/backend-modules/mail/templates/membership_deactivated_abo_uncancelled.html
@@ -65,16 +65,21 @@
                     </table>
                     <br />
                     <hr />
-                    <p>Guten Tag, {name}</p>
+                    <p>Guten Tag</p>
                     <p>
-                      Aus, finito, das wars. Ihre Mitgliedschaft wurde deaktiviert.
+                      Wir haben Ihnen in den letzten Wochen mehrere E-Mails zur
+                      Verlängerung Ihrer Mitgliedschaft geschickt, aber darauf
+                      keine Antwort erhalten. Auch einen Zahlungseingang für die
+                      Verlängerung Ihrer Mitgliedschaft können wir bis anhin
+                      nicht verzeichnen.
                     </p>
                     <p>
-                      Und wir fragen uns: Wie sind wir bloss an diesem Punkt gelandet?
+                      Deshalb verlieren Ihre Zugangsdaten ab sofort leider ihre
+                      Gültigkeit.
                     </p>
                     <p>
-                      Falls es ein Missverständnis war, dann können Sie es hier sofort 
-                      ungeschehen machen:
+                      Wenn Sie schlicht alle E-Mails übersehen haben –
+                      reaktivieren Sie jetzt Ihre Mitgliedschaft.
                     </p>
                     <table
                       width="100%"
@@ -90,7 +95,7 @@
                                 <a
                                   href="{{prolong_url}}"
                                   style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;"
-                                  >Jetzt meine Mitgliedschaft reaktivieren</a
+                                  >Jetzt erneuern</a
                                 >
                               </td>
                             </tr>
@@ -99,24 +104,30 @@
                       </tr>
                     </table>
                     <p>
-                      In nur zwei Minuten wird so aus einem abrupten Ende ein fulminanter 
-                      Neustart. Und Sie stellen sicher, dass unser Journalismus eine Zukunft hat.
+                      Journalismus kostet zwar, doch wir wollen niemanden
+                      ausschliessen: Wenn Sie einen finanziellen Engpass haben
+                      sollten, können Sie Ihre Mitgliedschaft zu einem tieferen
+                      Preis
+                      <a href="{{prolong_url}}">verlängern</a>.
                     </p>
                     <p>
-                      Ihre Crew der Republik
+                      Sollte uns hingegen ein Fehler unterlaufen sein, nehmen
+                      Sie bitte ebenfalls so schnell wie möglich Kontakt mit uns
+                      auf:
+                      <a href="mailto:kontakt@republik.ch"
+                        >kontakt@republik.ch</a
+                      >.
                     </p>
                     <p>
-                      PS: Journalismus kostet zwar, doch wir wollen niemanden ausschliessen. Wenn Sie einen 
-                      begründeten finanziellen Engpass haben sollten, können Sie <a href="{{prolong_url}}">Ihren Mitgliedschaftsbeitrag selbst bestimmen</a>.
+                      Wir würden uns freuen, Sie ein weiteres Jahr an Bord zu
+                      wissen. Und wenn Sie sich dagegen entscheiden, würden wir
+                      uns freuen, wenn Sie zu einem
+                      <a href="{{prolong_url}}"
+                        >späteren Zeitpunkt wieder vorbeischauten</a
+                      >.
                     </p>
-                    <p>PPS: Halt, stopp, Sie haben Ihre Mitgliedschaft bereits bezahlt? Dann muss 
-                      uns ein Fehler unterlaufen sein. Nehmen Sie bitte so schnell wie möglich 
-                      Kontakt mit uns auf: <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>.
-                    </p>
-                    <p>PPPS: Falls Sie sich bewusst gegen das Bleiben entschieden haben, dann haben 
-                      wir eine letzte Bitte: Nennen Sie uns zum Abschied Ihre Gründe? Sie kennen uns 
-                      mittlerweile so gut, dass Ihnen womöglich etwas aufgefallen ist, was wir übersehen haben.
-                    </p>
+                    <p>Herzlich</p>
+                    <p>Ihre Crew der Republik</p>
                   </td>
                 </tr>
                 <tr>
