--- a/packages/backend-modules/mail/templates/membership_owner_autopay_notice.html
+++ b/packages/backend-modules/mail/templates/membership_owner_autopay_notice.html
@@ -54,7 +54,7 @@
                     </p>
                     <p>
                       Diese E-Mail informiert Sie darüber, dass wir dies in
-                      {{days_left}} Tagen auch tatsächlich tun
+                      {{days_left}} Tagen tatsächlich und unverfroren tun
                       werden: Ihre {{autopay_card_brand}} mit den Endziffern
                       {{autopay_card_last4}} belasten wir am {{end_date}} mit
                       {{autopay_total}}.
