--- a/packages/backend-modules/mail/templates/membership_owner_prolong_notice.html
+++ b/packages/backend-modules/mail/templates/membership_owner_prolong_notice.html
@@ -42,9 +42,11 @@
                 <tr>
                   <td style="padding: 20px">
                     <p>Guten Tag</p>
-                    <p>Der {{end_date}} ist ein besonderer Tag: Es ist Ihr persönliches Republik-Jubiläum!</p>
+                    <p>Ihre Mitgliedschaft erneuert sich am {{end_date}}.</p>
                     <p>
-                      In den letzten zwölf Monaten haben wir für Sie recherchiert und geschrieben, fotografiert und korrigiert, programmiert und vieles mehr. Das war nur möglich, weil es Menschen wie Sie gibt, denen unabhängiger Journalismus wichtig ist. 
+                      Es ehrt uns, Sie als aufmerksames, kritisches und
+                      wohlwollendes Publikum an Bord zu haben, und wir würden
+                      uns freuen, Sie für ein weiteres Jahr dabei zu wissen:
                     </p>
                     <table
                       width="100%"
@@ -60,7 +62,7 @@
                                 <a
                                   href="{{prolong_url}}"
                                   style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;"
-                                  >Jetzt Mitgliedschaft erneuern!</a
+                                  >Jetzt erneuern</a
                                 >
                               </td>
                             </tr>
@@ -69,21 +71,46 @@
                       </tr>
                     </table>
                     <p>
-                      Egal, ob Sie uns einmal pro Woche oder einmal pro Jahr lesen (oder hören): Wir hoffen, dass wir Sie im vergangenen Jahr immer wieder erfolgreich überzeugen, herausfordern, informieren, erfreuen (und vielleicht auch ab und zu ärgern) konnten. 
+                      Ganz gleich, ob Sie uns einmal pro Woche oder einmal pro
+                      Jahr lesen: Wir hoffen, dass wir Sie im vergangenen Jahr
+                      immer wieder erfolgreich überzeugen, herausfordern,
+                      informieren, ärgern und erfreuen konnten.
                     </p>
                     <p>
-                      Denn der wirkliche Feind der Demokratie ist die Gleichgültigkeit – und dagegen schreiben wir an.
+                      Wie Sie wissen, finanziert sich die Republik über ihre
+                      Leserinnen und Leser: Es kommt also wirklich auf jede
+                      einzelne Person an. Sollten Sie dieses Mal noch mehr in
+                      unseren Journalismus investieren wollen und können, würde
+                      es uns freuen,
+                      <a href="{{prolong_url}}"
+                        >wenn Sie Ihren Beitrag erhöhen</a
+                      >: Jede zusätzliche Summe macht einen Unterschied.
                     </p>
-                    <p>Wir freuen uns auf ein weiteres Jahr mit Ihnen!
+                    <p>Sie haben nun die Wahl:</p>
+                    <ul
+                      style="color:#282828;font-size:17px;line-height:24px;{{sg_font_style_sans_serif_regular}}"
+                    >
+                      <li>
+                        <a href="{{prolong_url}}"
+                          >Sie bleiben an Bord und unterstützen weiterhin die
+                          Republik und ihre Idee: Hier bezahlen Sie die Rechnung
+                          für ein weiteres Jahr.
+                        </a>
+                      </li>
+                      <li>
+                        <a href="{{cancel_url}}"
+                          >Sie möchten die Republik nicht mehr lesen? Hier
+                          können Sie Ihre Mitgliedschaft kündigen</a
+                        >
+                        und, wenn Sie möchten, uns mitteilen, warum.
+                      </li>
+                    </ul>
+                    <p>
+                      Wie auch immer Sie entscheiden: Wir bedanken uns für Ihr
+                      Engagement und Ihr Vertrauen bis hierhin.
                     </p>
                     <p>Herzlich</p>
                     <p>Ihre Crew der Republik</p>
-                    <p>
-                      PS: Die Republik finanziert sich über ihre Leserinnen und Leser: Es kommt also wirklich auf jede einzelne Person an. <a href="{{prolong_url}}">Jede zusätzliche Summe</a> macht einen Unterschied.
-                    </p>
-                    <p>
-                      PPS: Sie wollen und können mehr in unseren Journalismus investieren? Grossartig! Wählen Sie bei der <a href="{{prolong_url}}">Erneuerung</a> die Option «Gönnerin oder Gönner».
-                    </p>
                   </td>
                 </tr>
                 <tr>
