--- a/packages/backend-modules/mail/templates/membership_owner_prolong_notice_0.html
+++ b/packages/backend-modules/mail/templates/membership_owner_prolong_notice_0.html
@@ -41,13 +41,18 @@
               <tbody>
                 <tr>
                   <td style="padding: 20px">
-                    <p>Guten Tag, {{name}}</p>
+                    <p>Guten Tag</p>
                     <p>
-                      Dank der Unterstützung unserer Verlegerinnen haben wir im vergangenen Jahr Politiker in die Pflicht genommen, Expertinnen interviewt, Menschen mit speziellen Geschichten zu Wort kommen lassen, unsere App verbessert und den wohl höflichsten virtuellen Gesprächsraum der Schweizer Medienlandschaft gepflegt. 
+                      Heute erneuern sich Ihre Mitgliedschaft und Ihr Engagement
+                      für die Medienvielfalt, die Informationsfreiheit und die
+                      Demokratie.
                     </p>
 
                     <p>
-                      Mit nur zwei Klicks sorgen Sie dafür, dass das so bleibt:
+                      Ihr Mitgliedschaftsbeitrag ist fällig. Damit Sie weiter
+                      Teil der Republik sind, müssen Sie nur die Rechnung für
+                      das nächste Jahr begleichen, was mit zwei Klicks erledigt
+                      ist:
                     </p>
                     <table
                       width="100%"
@@ -63,7 +68,7 @@
                                 <a
                                   href="{{prolong_url}}"
                                   style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;"
-                                  >Ich unterstütze die Republik</a
+                                  >Jetzt bezahlen</a
                                 >
                               </td>
                             </tr>
@@ -72,16 +77,35 @@
                       </tr>
                     </table>
                     <p>
-                      Ihr Einsatz wirkt, denn die Republik finanziert sich über ihre Leserinnen und Leser: Es kommt also wirklich auf jede einzelne Person an. 
+                      Sie wollen die Republik nicht mehr unterstützen? Bitte
+                      <a href="{{cancel_url}}"
+                        >kündigen Sie Ihre Mitgliedschaft</a
+                      >
+                      und teilen Sie uns mit, warum. Es wäre wertvoll für uns,
+                      Ihre Gründe zu kennen.
                     </p>
 
                     <p>
-                      Gemeinsam machen wir einen Unterschied.
+                      Sollte uns ein Fehler unterlaufen sein, schreiben Sie uns
+                      via
+                      <a href="mailto:kontakt@republik.ch"
+                        >kontakt@republik.ch</a
+                      >, und wir gehen dem Problem auf die Spur.
+                    </p>
+                    <p>
+                      Und wenn Sie einen finanziellen Engpass haben sollten,
+                      schreiben Sie uns ebenso auf
+                      <a href="mailto:kontakt@republik.ch"
+                        >kontakt@republik.ch</a
+                      >
+                      – Journalismus kostet zwar, doch wir wollen niemanden
+                      ausschliessen: Wir finden eine Lösung.
+                    </p>
+                    <p>
+                      Mit herzlichem Dank für das letzte Jahr und in Vorfreude
+                      auf ein neues!
                     </p>
                     <p>Ihre Crew der Republik</p>
-                    <p>PS: Sie haben Ihre Mitgliedschaft bereits erneuert? Dann muss uns ein Fehler unterlaufen sein. Schreiben Sie uns an 
-                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a> und wir gehen dem Problem auf die Spur.
-                    </p>
                   </td>
                 </tr>
                 <tr>
