--- a/packages/backend-modules/mail/templates/membership_owner_prolong_winback_7.html
+++ b/packages/backend-modules/mail/templates/membership_owner_prolong_winback_7.html
@@ -41,17 +41,16 @@
               <tbody>
                 <tr>
                   <td style="padding: 20px">
-                    <p>Guten Tag, {{name}}</p>
+                    <p>Guten Tag</p>
                     <p>
-                      Ihre Mitgliedschaft ist abgelaufen. Wenn Sie nichts tun, dann verlieren Sie 
-                      am {{grace_end_date}} Ihren Zugang zur Republik. 
-                      Und wir ein wertvolles Mitglied in der Chefetage.
+                      Am {{grace_end_date}} verlieren Ihre Zugangsdaten zum
+                      Republik-Magazin ihre Gültigkeit, da Ihre Mitgliedschaft
+                      ausgelaufen ist.
                     </p>
                     <p>
-                      Das wäre tragisch – denn ohne Menschen wie Sie gibt es keine Republik.
-                    </p>
-                    <p>
-                      Die gute Nachricht: In nur zwei Minuten können Sie den Lauf der Dinge ändern. 
+                      Um dies zu verhindern, können Sie einfach die Rechnung für
+                      das nächste Jahr begleichen, was mit einem Klick erledigt
+                      ist.
                     </p>
                     <table
                       width="100%"
@@ -76,15 +75,26 @@
                       </tr>
                     </table>
                     <p>
-                      Sie haben es in der Hand.
+                      Wollen Sie die Republik nicht mehr lesen?
+                      <a href="{{cancel_url}}"
+                        >Kündigen Sie Ihre Mitgliedschaft</a
+                      >
+                      und teilen Sie uns mit, warum. Es wäre wertvoll für uns,
+                      Ihre Gründe zu kennen.
                     </p>
                     <p>
-                      Vielen Dank für Ihre zwei Minuten und beste Grüsse aus dem Rothaus
+                      Sollte uns ein Fehler unterlaufen sein, nehmen Sie bitte
+                      mit uns Kontakt auf: Schreiben Sie an
+                      <a href="mailto:kontakt@republik.ch"
+                        >kontakt@republik.ch</a
+                      >
+                      oder antworten Sie direkt auf diese E-Mail.
+                    </p>
+                    <p>
+                      Wir bedanken uns herzlich für das letzte Jahr, und es
+                      würde uns freuen, Sie für ein weiteres an Bord zu wissen!
                     </p>
                     <p>Ihre Crew der Republik</p>
-                    <p>PS: Journalismus kostet, doch wir wollen niemanden ausschliessen. Wenn Sie einen finanziellen Engpass haben sollten, dann melden Sie sich bei uns: 
-                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>. Wir finden einen Lösung.
-                    </p>
                   </td>
                 </tr>
                 <tr>
