--- a/packages/backend-modules/mail/templates/payment_successful_donate_pot.html
+++ b/packages/backend-modules/mail/templates/payment_successful_donate_pot.html
@@ -43,60 +43,27 @@
                   <td style="padding: 20px">
                     <p>Guten Tag</p>
                     <p>
-                      Heute endet Ihr Republik-Abonnement. Herzlichen Dank für
-                      Ihr Interesse und Ihre Neugier bis hierhin!
+                      <strong
+                        >Herzlichen Dank für Ihre Wachstums-Spende von
+                        {{total_formatted}}.<br />
+                        Die Zahlung ist erfolgreich bei uns eingegangen.</strong
+                      >
+                    </p>
+
+                    <p>
+                      Pro 240 Franken, die so zusammenkommen, schenken wir einer
+                      ausgewählten Person eine Mitgliedschaft.
                     </p>
                     <p>
-                      <a href="{{prolong_url}}"
-                        >Wir würden uns sehr freuen, wenn Sie weiter an Bord
-                        blieben</a
-                      >.
+                      Mit Ihrem Geld fördern Sie das Wachstum der Republik – und
+                      damit auch eine unabhängige vierte Gewalt als zentrale
+                      Institution unserer Demokratie.
                     </p>
+
                     <p>
-                      Ganz gleich, ob Sie uns einmal pro Woche, einmal pro Monat
-                      oder einmal pro Jahr lesen – mit Ihrem Beitrag stärken Sie
-                      kritischen Journalismus, die vierte Gewalt und die
-                      Demokratie.
+                      Herzlich<br />
+                      Ihre Crew der Republik
                     </p>
-                    <p>
-                      Wie Sie wissen, finanziert sich die Republik als
-                      unabhängiges und werbefreies Magazin über ihre Leserinnen
-                      und Leser: Es kommt also wirklich auf jede einzelne Person
-                      an.
-                    </p>
-                    <p>Nun haben Sie die Wahl:</p>
-                    <ul>
-                      <li>
-                        <a href="{{prolong_url}}"
-                          >Sie bleiben weiterhin dabei mit der
-                          Jahresmitgliedschaft</a
-                        >: Hiermit erhalten Sie nicht nur von Montag bis Samstag
-                        unser Magazin, sondern werden auch Mitglied der Project
-                        R Genossenschaft und Teil unserer Verlagsetage.
-                      </li>
-                      <li>
-                        <a href="{{link_offer_monthly_abo}}"
-                          >Das Monatsabonnement</a
-                        >: Das kostet nur CHF 22 im Monat, wird Ihrer
-                        Kreditkarte belastet und verlängert sich automatisch –
-                        kann dabei aber jederzeit und ohne Frist gekündigt
-                        werden. Sie erhalten hierbei Zugriff auf das Magazin,
-                        sind aber nicht Teil der Genossenschaft.
-                      </li>
-                      <li>
-                        Wollen Sie die Republik nicht mehr lesen?
-                        <a href="{{cancel_url}}"
-                          >Kündigen Sie Ihre Mitgliedschaft und teilen Sie uns
-                          mit, warum</a
-                        >. Es wäre wertvoll für uns, Ihre Gründe zu kennen.
-                      </li>
-                    </ul>
-                    <p>
-                      Sollten Sie nichts tun, verlieren Ihre Zugangsdaten am
-                      {{grace_end_date}} leider ihre Gültigkeit.
-                    </p>
-                    <p>Herzlich</p>
-                    <p>Ihre Crew der Republik</p>
                   </td>
                 </tr>
                 <tr>
