--- a/packages/backend-modules/mail/templates/membership_deactivated_abo_give_months_uncancelled.html
+++ b/packages/backend-modules/mail/templates/membership_deactivated_abo_give_months_uncancelled.html
@@ -65,19 +65,25 @@
                     </table>
                     <br />
                     <hr />
-                    <p>Guten Tag, {name}</p>
+                    <p>Guten Tag</p>
                     <p>
-                      Aus, finito, das wars. Ihr Abonnement wurde deaktiviert.
+                      Schade, sind Sie nicht mehr Teil der Republik und der Idee
+                      hinter unserem Projekt!
                     </p>
                     <p>
-                      Und wir fragen uns: Wie sind wir bloss an diesem Punkt gelandet?
+                      Wir haben Ihnen eine E-Mail zur Verlängerung Ihres
+                      Abonnements geschickt, aber darauf keine Antwort erhalten.
+                      Einen Zahlungseingang für die Verlängerung Ihres
+                      Abonnements können wir bis heute auch nicht verzeichnen.
                     </p>
                     <p>
-                      Falls es ein Missverständnis war, dann können Sie es hier sofort ungeschehen machen:
+                      Deshalb verlieren Ihre Zugangsdaten ab sofort leider ihre
+                      Gültigkeit.
                     </p>
                     <p>
-                      Wenn Sie schlicht alle E-Mails übersehen haben –
-                      reaktivieren Sie jetzt Ihre Mitgliedschaft.
+                      Wenn Sie schlicht unsere E-Mails übersehen haben – lösen
+                      Sie jetzt eine Jahresmitgliedschaft. Das dauert nicht
+                      einmal drei Minuten.
                     </p>
                     <table
                       width="100%"
@@ -91,9 +97,9 @@
                             <tr>
                               <td align="center" bgcolor="#3CAD00">
                                 <a
-                                  href="{{prolong_url}}"
+                                  href="{{link_offer_abo}}"
                                   style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;"
-                                  >Jetzt eine Jahresmitgliedschaft lösen </a
+                                  >Jahresmitgliedschaft kaufen</a
                                 >
                               </td>
                             </tr>
@@ -102,23 +108,32 @@
                       </tr>
                     </table>
                     <p>
-                      In nur zwei Minuten wird so aus einem abrupten Ende ein fulminanter Neustart. Und Sie stellen sicher, dass unser Journalismus eine Zukunft hat.
+                      Falls Sie uns lieber kurzfristiger unterstützen wollen,
+                      gibt es die Möglichkeit, ein
+                      <a href="{{link_offer_monthly_abo}}">Monatsabo</a> zu
+                      kaufen. Das kostet nur CHF 22 im Monat, wird Ihrer
+                      Kreditkarte belastet und verlängert sich automatisch –
+                      kann dabei aber jederzeit und ohne Frist gekündigt werden.
                     </p>
                     <p>
-                      Ihre Crew der Republik
+                      Und wenn Sie einen finanziellen Engpass haben, schreiben
+                      Sie uns auf
+                      <a href="mailto:kontakt@republik.ch"
+                        >kontakt@republik.ch</a
+                      >
+                      – Journalismus kostet zwar, doch wir wollen niemanden
+                      ausschliessen: Wir finden eine Lösung.
                     </p>
                     <p>
-                      PS: Journalismus kostet zwar, doch wir wollen niemanden ausschliessen. Wenn Sie einen 
-                      begründeten finanziellen Engpass haben sollten, können Sie <a href="{{prolong_url}}">Ihren Mitgliedschaftsbeitrag selbst bestimmen</a>.
+                      Sollte uns hingegen ein Fehler unterlaufen sein, nehmen
+                      Sie bitte ebenfalls so schnell wie möglich Kontakt mit uns
+                      auf:
+                      <a href="mailto:kontakt@republik.ch"
+                        >kontakt@republik.ch</a
+                      >.
                     </p>
-                    <p>PPS: Halt, stopp, Sie haben bereits eine neue Mitgliedschaft oder ein Abo gelöst? Dann muss 
-                      uns ein Fehler unterlaufen sein. Nehmen Sie bitte so schnell wie möglich 
-                      Kontakt mit uns auf: <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>.
-                    </p>
-                    <p>PPPS: Falls Sie sich bewusst gegen das Bleiben entschieden haben, dann haben 
-                      wir eine letzte Bitte: Nennen Sie uns zum Abschied Ihre Gründe? Sie kennen uns 
-                      mittlerweile so gut, dass Ihnen womöglich etwas aufgefallen ist, was wir übersehen haben.
-                    </p>
+                    <p>Herzlich</p>
+                    <p>Ihre Crew der Republik</p>
                   </td>
                 </tr>
                 <tr>
