--- a/packages/backend-modules/mail/templates/membership_giver_prolong_notice.html
+++ b/packages/backend-modules/mail/templates/membership_giver_prolong_notice.html
@@ -41,37 +41,26 @@
               <tbody>
                 <tr>
                   <td style="padding: 20px">
-                    <p>Guten Tag, {name}</p>
+                    <p>Guten Tag</p>
                     <p>
-                      Vor knapp einem Jahr haben Sie eine Eigenschaft an den Tag gelegt, von der viele Menschen nur 
-                      träumen können: Grosszügigkeit. 
+                      Herzlichen Dank für Ihre Grosszügigkeit und Ihr Vertrauen.
                     </p>
                     <p>
                       Sie haben {{#if hasOneGiftedMembership}}eine
                       Mitgliedschaft{{else if hasMultipleGiftedMemberships}}
-                      mehrere Mitgliedschaften{{/if}} verschenkt: 365 Tage Zugang zum Republik-Magazin, zu Recherchen, 
-                      Analysen, Kolumnen, Briefings, Newslettern, dem wohl höflichsten Debattenraum und vielem mehr.
+                      mehrere Mitgliedschaften{{/if}} verschenkt.
                     </p>
-                    <p>
-                      Folgende{{#if hasOneGiftedMembership}} Mitgliedschaft steht{{else if hasMultipleGiftedMemberships}} 
-                      Mitgliedschaften stehen{{/if}} zur Verlängerung an:
-                      {{#options}}
-                      {{this.olabel}}
-                      {{/options}}
-                    </p> 
-
                     {{#if hasOneGiftedMembership}}
-                    <p>Bevor diese Mitgliedschaft endet, erlauben wir uns die Frage:</p>
+                    <p>Diese Mitgliedschaft endet bald.</p>
                     {{else if hasMultipleGiftedMemberships}}
-                    <p>Bevor diese Mitgliedschaften enden, erlauben wir uns die Frage:</p>
+                    <p>Diese Mitgliedschaften enden bald.</p>
                     {{/if}}
                     <p>
-                      Möchten Sie das Geschenk erneuern? 
+                      Schenken Sie noch ein weiteres Jahr unabhängige und
+                      werbefreie Einordnung und Vertiefung anstelle einer Flut
+                      von Nachrichten?
                     </p>
                     <p>
-                      Es ist, wie wir ganz unvoreingenommen finden, ein äusserst vielseitiges und in mehrfacher Hinsicht nützliches Geschenk: Die glücklichen Beschenkten erhalten ein hochwertiges Magazin und gleichzeitig unterstützen Sie unabhängigen Journalismus in der Schweiz.
-                    </p>
-                    <!-- <p>
                       Folgende{{#if hasOneGiftedMembership}}
                       Mitgliedschaft steht{{else if hasMultipleGiftedMemberships}}
                       Mitgliedschaften stehen{{/if}} zur Verlängerung an:
@@ -83,7 +72,13 @@
                       {{#options}}
                       <li>{{this.olabel}}</li>
                       {{/options}}
-                    </ul> -->
+                    </ul>
+                    <p>
+                      Klicken Sie hier, um {{#if hasOneGiftedMembership}}die
+                      Geschenkmitgliedschaft{{else if
+                      hasMultipleGiftedMemberships}}die
+                      Geschenkmitgliedschaften{{/if}} zu verlängern:
+                    </p>
                     <table
                       width="100%"
                       border="0"
@@ -98,7 +93,7 @@
                                 <a
                                   href="{{prolong_url}}"
                                   style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;"
-                                  >Jetzt die Republik verschenken</a
+                                  >Jetzt weiter die Republik verschenken</a
                                 >
                               </td>
                             </tr>
@@ -107,16 +102,16 @@
                       </tr>
                     </table>
                     <p>
-                      
-                      Als leserinnenfinanziertes Medium würde es uns viel bedeuten, wenn die von Ihnen beschenkte Person auch weiterhin an Bord bliebe. Das liegt aber natürlich nicht in Ihrer Verantwortung. Deshalb werden wir – falls Sie innerhalb der nächsten {{inform_claimers_days}} Tage nichts unternehmen –
-                      {{#if hasOneGiftedMembership}} die beschenkte
+                      Falls Sie innerhalb der nächsten {{inform_claimers_days}}
+                      Tage nichts unternehmen, erlauben wir uns, {{#if
+                      hasOneGiftedMembership}} die beschenkte
                       Person{{else if hasMultipleGiftedMemberships}}die
                       beschenkten Personen{{/if}} direkt anzufragen, ob sie ein
-                      weiteres Jahr bei der Republik bleiben {{#if hasOneGiftedMembership}}möchte{{else if hasMultipleGiftedMemberships}}
+                      weiteres Jahr an Bord sein {{#if hasOneGiftedMembership}}möchte{{else if hasMultipleGiftedMemberships}}
                       möchten{{/if}}. Dies dann natürlich auf eigene
                       Rechnung.
                     </p>
-                    <p>Wie auch immer Sie sich entscheiden: Wir danken Ihnen herzlich für die Unterstützung!</p>
+                    <p>Wir danken Ihnen herzlich für die Unterstützung!</p>
                     <p>Ihre Crew der Republik</p>
                   </td>
                 </tr>
