--- a/packages/backend-modules/mail/templates/membership_owner_autopay_failed.html
+++ b/packages/backend-modules/mail/templates/membership_owner_autopay_failed.html
@@ -44,95 +44,57 @@
                     <p>Guten Tag</p>
                     {{#if thirdAttempt}}
                     <p>
-                      Wir brauchen Ihre Hilfe: Seit dem {{end_date}} ist Ihr Jahresbeitrag 
-                      von {{autopay_total}} fällig, aber wir konnten die von Ihnen hinterlegte 
-                      Kreditkarte {{autopay_card_brand}} mit den Endziffern {{autopay_card_last4}} 
-                      nicht belasten.
+                      Ihre Mitgliedschaft erneuerte sich am {{end_date}} um ein
+                      weiteres Jahr. Bedauerlicherweise konnten wir erneut den
+                      Jahresbeitrag von {{autopay_total}} Ihrer hinterlegten
+                      {{autopay_card_brand}} mit den Endziffern
+                      {{autopay_card_last4}} nicht belasten.
                     </p>
                     <p>
-                      Bitte aktualisieren Sie Ihre Kreditkartendaten {{prolong_url}} oder wählen 
-                      Sie bis zum {{attempt_next_at}} eine andere Zahlungsart – sonst endet Ihre 
-                      Mitgliedschaft und Sie verlieren Ihren Zugang zur Republik. 
-                    </p>
-                    <table
-                      width="100%"
-                      border="0"
-                      cellspacing="0"
-                      cellpadding="0"
-                    >
-                      <tr>
-                        <td>
-                          <table border="0" cellspacing="0" cellpadding="0">
-                            <tr>
-                              <td align="center" bgcolor="#3CAD00">
-                                <a
-                                  href="{{prolong_url}}"
-                                  style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;"
-                                  >Jetzt Zahlungsart aktualisieren!</a
-                                >
-                              </td>
-                            </tr>
-                          </table>
-                        </td>
-                      </tr>
-                    </table>
-                    <p>
-                      Als leserinnenfinanziertes Magazin zählt für uns jeder Beitrag, 
-                      egal wie hoch die Summe ist.
+                      Wir unternehmen am {{attempt_next_at}} einen letzten
+                      Versuch und bitten Sie, bis dahin
+                      <a href="{{prolong_url}}"
+                        >Ihre Kreditkartendaten hier gegebenenfalls zu
+                        aktualisieren</a
+                      >.
                     </p>
                     <p>
-                      Falls Sie gerade einen finanziellen Engpass haben: Journalismus kostet zwar, 
-                      doch wir wollen niemanden ausschliessen. Wir haben Verständnis, wenn es für 
-                      {{autopay_total}} nicht reicht. Wir bieten Ihnen deshalb die Möglichkeit, die
+                      Am Finanziellen soll es nicht scheitern: Journalismus
+                      kostet zwar, doch wir wollen niemanden ausschliessen. Wir
+                      haben Verständnis, wenn es für {{autopay_total}} nicht
+                      reicht: Sie haben die Möglichkeit, die
                       <a href="{{prolong_url_reduced}}"
                         >Höhe Ihres Mitgliederbeitrags selbst zu bestimmen</a
                       >.
                     </p>
                     {{else if fourthAttempt}}
                     <p>
-                      Am {{end_date}} ist Ihr Jahresbeitrag von {{autopay_total}} fällig geworden. Trotz 
-                      mehrfachen Versuchen konnten wir den Betrag von Ihrer hinterlegten {{autopay_card_brand}} 
-                      mit den Endziffern {{autopay_card_last4}} nicht abbuchen.
+                      Ihre Mitgliedschaft erneuerte sich am {{end_date}} um ein
+                      weiteres Jahr. Trotz mehrfachen Versuchen konnten wir den
+                      Jahresbeitrag von {{autopay_total}} Ihrer hinterlegten
+                      {{autopay_card_brand}} mit den Endziffern
+                      {{autopay_card_last4}} nicht belasten.
                     </p>
                     <p>
-                      Wir sehen uns daher zu unserem grossen Bedauern gezwungen, 
+                      Wir sehen uns daher zu unserem grossen Bedauern gezwungen,
                       Ihre Mitgliedschaft am {{grace_end_date}} zu deaktivieren.
                     </p>
                     <p>
-                      So weit muss es nicht kommen: Begleichen Sie den ausstehenden 
-                      Jahresbeitrag {{prolong_url}} , wenn Sie möchten, auch mit einer 
-                      anderen Zahlungsart.
+                      Wollen Sie dies verhindern, können Sie
+                      <a href="{{prolong_url}}"
+                        >den ausstehenden Jahresbeitrag begleichen</a
+                      >, wenn Sie möchten, auch mit einer anderen Zahlungsart.
                     </p>
-                    <table
-                      width="100%"
-                      border="0"
-                      cellspacing="0"
-                      cellpadding="0"
-                    >
-                      <tr>
-                        <td>
-                          <table border="0" cellspacing="0" cellpadding="0">
-                            <tr>
-                              <td align="center" bgcolor="#3CAD00">
-                                <a
-                                  href="{{prolong_url}}"
-                                  style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;"
-                                  >Jetzt bezahlen!</a
-                                >
-                              </td>
-                            </tr>
-                          </table>
-                        </td>
-                      </tr>
-                    </table>
                     {{else}}
                     <p>
-                      Bei Ihrem letzten Kauf haben Sie uns die Erlaubnis gegeben, 
-                      Ihre hinterlegte Kreditkarte für zukünftige Käufe automatisch 
-                      zu belasten. Bedauerlicherweise konnten wir den Jahresbeitrag 
-                      von {{autopay_total}} am {{end_date}} aber nicht von Ihrer hinterlegten
-                      {{autopay_card_brand}} mit den Endziffern {{autopay_card_last4}} abbuchen.
-                   </p>
+                      Ihre Mitgliedschaft erneuerte sich am {{end_date}} um ein
+                      weiteres Jahr. Bei Ihrem letzten Kauf haben Sie angegeben,
+                      dass Sie uns erlauben, Ihre hinterlegte Kreditkarte
+                      automatisch zu belasten. Bedauerlicherweise konnten wir
+                      den Jahresbeitrag von {{autopay_total}} von Ihrer
+                      hinterlegten {{autopay_card_brand}} mit den Endziffern
+                      {{autopay_card_last4}} nicht abbuchen.
+                    </p>
                     {{#if authentication_required}}
                     <p>
                       Dies, weil Ihre Kreditkarte verlangt, dass Buchungen von
