--- a/packages/backend-modules/mail/templates/membership_owner_autopay_successful.html
+++ b/packages/backend-modules/mail/templates/membership_owner_autopay_successful.html
@@ -43,15 +43,15 @@
                   <td style="padding: 20px">
                     <p>Guten Tag</p>
                     <p>
-                      Wie bereits vor einigen Tagen angekündigt, haben wir nun 
-                      Ihre Mitgliedschaft um ein weiteres Jahr
+                      Wie bereits vor einigen Tagen angekündigt, haben wir nun
+                      unverfroren Ihre Mitgliedschaft um ein weiteres Jahr
                       verlängert: Dafür wurde Ihre {{autopay_card_brand}} mit
                       den Endziffern {{autopay_card_last4}} mit
                       {{autopay_total}} belastet.
                     </p>
                     <p>
-                      Wir bedanken uns für Ihre Treue und Ihr Vertrauen. Es
-                      ist uns eine Ehre, Sie ein weiteres Jahr an Bord zu wissen.
+                      Wir bedanken uns für Ihre Treue und Ihr Vertrauen. Wir
+                      freuen uns sehr, Sie ein weiteres Jahr an Bord zu wissen.
                     </p>
                     <p>
                       Ihre Mitgliedschaft läuft neu bis zum
