--- a/packages/backend-modules/mail/templates/payment_reminder_abo_give.html
+++ b/packages/backend-modules/mail/templates/payment_reminder_abo_give.html
@@ -42,15 +42,33 @@
                 <tr>
                   <td style="padding: 20px">
                     <p>Guten Tag</p>
-                    <p>Wir finden es grossartig, dass Sie die Republik unterstützen.</p>
+                    <p>Schön, dass Sie die Republik unterstützen.</p>
                     <p>
-                      Nun hat sich allerdings unsere Buchhaltung mit dem Hinweis gemeldet, Ihr Mitgliedschafts-
-                      oder Unterstützungsbeitrag in der Höhe von CHF {{total}} sei noch ausstehend.
+                      Mit Ihrer Mitgliedschaft erhalten Sie sechsmal pro Woche
+                      ein unabhängiges und werbefreies digitales Magazin für
+                      Politik, Wirtschaft, Gesellschaft und Kultur.
                     </p>
                     <p>
-                      Dürfen wir Sie freundlich bitten, den Betrag in den nächsten Tagen zu überweisen?
+                      Sie fördern aber auch eine wirklich unabhängige vierte
+                      Gewalt als zentrale Institution unserer Demokratie.
                     </p>
-                    <p>Hier noch einmal die Zahlungsinformationen:</p>
+                    <p>
+                      Denn: Die Republik steht für die Verteidigung der
+                      demokratischen Institutionen und die Werte der Aufklärung.
+                      Für Treue zu Fakten, für Lösungen von Fall zu Fall, für
+                      Offenheit gegenüber Kritik, für Respektlosigkeit gegenüber
+                      der Macht und Respekt vor dem Menschen.
+                    </p>
+                    <p>
+                      Falls sich unsere Buchhaltung nicht irrt, ist allerdings
+                      Ihr Mitgliedschafts- oder Unterstützungsbeitrag in der
+                      Höhe von CHF {{total}} noch ausstehend.
+                    </p>
+                    <p>
+                      Dürfen wir Sie freundlich bitten, den Betrag in den
+                      nächsten Tagen zu überweisen?
+                    </p>
+                    <p>Zahlungsinformationen:</p>
                     <ul
                       style="color:#282828;font-size:17px;line-height:24px;{{sg_font_style_sans_serif_regular}}"
                     >
