--- a/packages/backend-modules/mail/templates/payment_reminder_last_yearly_abo.html
+++ b/packages/backend-modules/mail/templates/payment_reminder_last_yearly_abo.html
@@ -42,16 +42,16 @@
                 <tr>
                   <td style="padding: 20px">
                     <p>Guten Tag</p>
-                    <p>Ihr Mitgliedschafts- oder Unterstützungsbeitrag in der Höhe von CHF {{total}} ist weiterhin ausstehend.</p>
+                    <p>Schön, dass Sie die Republik unterstützen wollen.</p>
                     <p>
-                      Wenn wir Ihre Zahlung in den nächsten 30 Tagen nicht erhalten, gehen wir davon aus, dass Sie die Republik 
-                      nicht mehr lesen möchten, und deaktivieren Ihr Abo und Ihre Mitgliedschaft.
+                      Falls sich unsere Buchhaltung nicht irrt, ist der von
+                      Ihnen gewählte Abo-Beitrag in der Höhe von CHF {{total}}
+                      aber weiterhin ausstehend.
                     </p>
                     <p>
-                      Doch so weit muss es nicht kommen.
-                    </p>
-                    <p>
-                      Es gibt eine bessere Alternative: sofort die Rechnung bezahlen und dabeibleiben!
+                      Dürfen wir Sie freundlich bitten, den Betrag in den
+                      nächsten Tagen zu überweisen? Unser Projekt ist auf Ihren
+                      Beitrag angewiesen.
                     </p>
                     <p>Zahlungsinformationen:</p>
                     <ul
@@ -74,6 +74,11 @@
                       <a href="mailto:kontakt@republik.ch"
                         >kontakt@republik.ch</a
                       >.
+                    </p>
+                    <p>
+                      Wenn wir Ihre Zahlung in den nächsten 30 Tagen nicht
+                      erhalten, gehen wir davon aus, dass Sie die Republik nicht
+                      mehr lesen möchten, und deaktivieren Ihr Abo.
                     </p>
                     <p>Herzlich<br />Ihre Crew der Republik</p>
                   </td>
