--- a/packages/backend-modules/mail/templates/pledge_donate_pot.html
+++ b/packages/backend-modules/mail/templates/pledge_donate_pot.html
@@ -43,74 +43,38 @@
                   <td style="padding: 20px">
                     <p>Guten Tag</p>
                     <p>
-                      Wie Sie wissen, erneuert sich Ihre Mitgliedschaft schon am
-                      {{end_date}} um ein weiteres Jahr.
+                      Herzlichen Dank für Ihre grosszügige Wachstums-Spende.
+                    </p>
+                    <p></p>
+
+                    <p>
+                      Pro 240 Franken, die so zusammenkommen, schenken wir einer
+                      ausgewählten Person eine Mitgliedschaft.
                     </p>
                     <p>
-                      Wir würden uns freuen, Sie weiterhin an Bord der Republik
-                      zu wissen:
+                      Mit Ihrem Geld fördern Sie das Wachstum der Republik – und
+                      damit auch eine unabhängige vierte Gewalt als zentrale
+                      Institution unserer Demokratie.
                     </p>
-                    <table
-                      width="100%"
-                      border="0"
-                      cellspacing="0"
-                      cellpadding="0"
-                    >
-                      <tr>
-                        <td>
-                          <table border="0" cellspacing="0" cellpadding="0">
-                            <tr>
-                              <td align="center" bgcolor="#3CAD00">
-                                <a
-                                  href="{{prolong_url}}"
-                                  style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;"
-                                  >Jetzt erneuern</a
-                                >
-                              </td>
-                            </tr>
-                          </table>
-                        </td>
-                      </tr>
-                    </table>
-                    <p>
-                      Wie Sie wissen, finanziert sich die Republik über ihre
-                      Leserinnen und Leser: Mit Ihrem Beitrag stärken Sie den
-                      unabhängigen Journalismus, die vierte Gewalt und die
-                      Demokratie.
-                    </p>
-                    <p>Nun müssen Sie sich entscheiden:</p>
+
+                    {{#if paymentslip}}
+                    <p>Zahlungsinformationen:</p>
                     <ul
                       style="color:#282828;font-size:17px;line-height:24px;{{sg_font_style_sans_serif_regular}}"
                     >
-                      <li>
-                        Sie bleiben an Bord und investieren weiter in die
-                        Republik und ihre Idee.
-                        <a href="{{prolong_url}}"
-                          >Hier können Sie die Rechnung für ein weiteres Jahr
-                          bezahlen.</a
-                        >
-                      </li>
-                      <li>
-                        Sie möchten die Republik nicht mehr unterstützen?
-                        <a href="{{cancel_url}}"
-                          >Hier können Sie Ihre Mitgliedschaft kündigen</a
-                        >
-                        und uns sagen, warum. Wir sind stets um
-                        Weiterentwicklung bemüht, und Ihre Rückmeldung hilft uns
-                        dabei.
-                      </li>
+                      <li>IBAN: {{iban}}</li>
+                      <li>Referenz: {{reference}}</li>
+                      <li>Betrag: {{total_formatted}}</li>
+                      <li>Zahlbar bis: {{due_date}}</li>
                     </ul>
+                    <p>Anbei finden Sie eine QR-Rechnung.</p>
                     <p>
-                      Wie auch immer Sie entscheiden: Wir bedanken uns für Ihr
-                      Engagement und Ihr Vertrauen bis hierhin.
+                      Die QR-Rechnung ersetzt den Einzahlungsschein. Sie können
+                      damit die Zahlung via Mobile Banking, E-Banking oder am
+                      Schalter bei Bank und Post auslösen.
                     </p>
-                    <p>
-                      Falls Sie Fragen haben, beantworten wir diese sehr gerne
-                      unter
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >.
-                    </p>
+                    {{/if}}
+
                     <p>Herzlich</p>
                     <p>Ihre Crew der Republik</p>
                   </td>
