--- a/packages/backend-modules/mail/templates/pledge_lesha.html
+++ b/packages/backend-modules/mail/templates/pledge_lesha.html
@@ -42,75 +42,53 @@
                 <tr>
                   <td style="padding: 20px">
                     <p>Guten Tag</p>
-                    <p>
-                      Wie Sie wissen, erneuert sich Ihre Mitgliedschaft schon am
-                      {{end_date}} um ein weiteres Jahr.
-                    </p>
-                    <p>
-                      Wir würden uns freuen, Sie weiterhin an Bord der Republik
-                      zu wissen:
-                    </p>
-                    <table
-                      width="100%"
-                      border="0"
-                      cellspacing="0"
-                      cellpadding="0"
-                    >
-                      <tr>
-                        <td>
-                          <table border="0" cellspacing="0" cellpadding="0">
-                            <tr>
-                              <td align="center" bgcolor="#3CAD00">
-                                <a
-                                  href="{{prolong_url}}"
-                                  style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;"
-                                  >Jetzt erneuern</a
-                                >
-                              </td>
-                            </tr>
-                          </table>
-                        </td>
-                      </tr>
-                    </table>
-                    <p>
-                      Wie Sie wissen, finanziert sich die Republik über ihre
-                      Leserinnen und Leser: Mit Ihrem Beitrag stärken Sie den
-                      unabhängigen Journalismus, die vierte Gewalt und die
-                      Demokratie.
-                    </p>
-                    <p>Nun müssen Sie sich entscheiden:</p>
+                    <p>Vielen Dank für Ihre Bestellung.</p>
+
                     <ul
                       style="color:#282828;font-size:17px;line-height:24px;{{sg_font_style_sans_serif_regular}}"
                     >
+                      {{#options}}
                       <li>
-                        Sie bleiben an Bord und investieren weiter in die
-                        Republik und ihre Idee.
-                        <a href="{{prolong_url}}"
-                          >Hier können Sie die Rechnung für ein weiteres Jahr
-                          bezahlen.</a
-                        >
+                        {{#if this.hasMultipleOAmounts}} {{this.oamount}}
+                        {{this.olabel}} à {{this.oprice_formatted}}:
+                        {{this.ototal_formatted}} {{else}} {{this.oamount}}
+                        {{this.olabel}}: {{this.ototal_formatted}} {{/if}}
                       </li>
+                      {{/options}} {{#if discount}}
                       <li>
-                        Sie möchten die Republik nicht mehr unterstützen?
-                        <a href="{{cancel_url}}"
-                          >Hier können Sie Ihre Mitgliedschaft kündigen</a
-                        >
-                        und uns sagen, warum. Wir sind stets um
-                        Weiterentwicklung bemüht, und Ihre Rückmeldung hilft uns
-                        dabei.
+                        Gewünschte Preisreduktion: –{{discount_formatted}}
+                      </li>
+                      {{/if}} {{#if donation}}
+                      <li>Spende: {{donation_formatted}}</li>
+                      {{/if}}
+                      <li>
+                        <strong>Total: {{total_formatted}}</strong>
                       </li>
                     </ul>
+
                     <p>
-                      Wie auch immer Sie entscheiden: Wir bedanken uns für Ihr
-                      Engagement und Ihr Vertrauen bis hierhin.
+                      Der Versand erfolgt innerhalb von 7 Tagen{{#if
+                      paymentslip}} nach Zahlungseingang{{/if}}.
                     </p>
+
+                    {{#if paymentslip}}
+                    <p>Zahlungsinformationen:</p>
+                    <ul
+                      style="color:#282828;font-size:17px;line-height:24px;{{sg_font_style_sans_serif_regular}}"
+                    >
+                      <li>IBAN: {{iban}}</li>
+                      <li>Referenz: {{reference}}</li>
+                      <li>Betrag: {{total_formatted}}</li>
+                      <li>Zahlbar bis: {{due_date}}</li>
+                    </ul>
+                    <p>Anbei finden Sie eine QR-Rechnung.</p>
                     <p>
-                      Falls Sie Fragen haben, beantworten wir diese sehr gerne
-                      unter
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >.
+                      Die QR-Rechnung ersetzt den Einzahlungsschein. Sie können
+                      damit die Zahlung via Mobile Banking, E-Banking oder am
+                      Schalter bei Bank und Post auslösen.
                     </p>
+                    {{/if}}
+
                     <p>Herzlich</p>
                     <p>Ihre Crew der Republik</p>
                   </td>
