Revert "Merge pull request #697 from republik/revert-571-update-transactionals"
This reverts commit c87e371a2a2a5f7149ff33802c8c7ac9c5821235, reversing
changes made to fe0fc0eed0ded2c694bf6e0c2aac823fa2279897.

--- a/packages/backend-modules/mail/templates/membership_deactivated_abo_uncancelled.html
+++ b/packages/backend-modules/mail/templates/membership_deactivated_abo_uncancelled.html
@@ -65,21 +65,16 @@
                     </table>
                     <br />
                     <hr />
-                    <p>Guten Tag</p>
+                    <p>Guten Tag, {name}</p>
                     <p>
-                      Wir haben Ihnen in den letzten Wochen mehrere E-Mails zur
-                      Verlängerung Ihrer Mitgliedschaft geschickt, aber darauf
-                      keine Antwort erhalten. Auch einen Zahlungseingang für die
-                      Verlängerung Ihrer Mitgliedschaft können wir bis anhin
-                      nicht verzeichnen.
+                      Aus, finito, das wars. Ihre Mitgliedschaft wurde deaktiviert.
                     </p>
                     <p>
-                      Deshalb verlieren Ihre Zugangsdaten ab sofort leider ihre
-                      Gültigkeit.
+                      Und wir fragen uns: Wie sind wir bloss an diesem Punkt gelandet?
                     </p>
                     <p>
-                      Wenn Sie schlicht alle E-Mails übersehen haben –
-                      reaktivieren Sie jetzt Ihre Mitgliedschaft.
+                      Falls es ein Missverständnis war, dann können Sie es hier sofort 
+                      ungeschehen machen:
                     </p>
                     <table
                       width="100%"
@@ -95,7 +90,7 @@
                                 <a
                                   href="{{prolong_url}}"
                                   style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;"
-                                  >Jetzt erneuern</a
+                                  >Jetzt meine Mitgliedschaft reaktivieren</a
                                 >
                               </td>
                             </tr>
@@ -104,30 +99,24 @@
                       </tr>
                     </table>
                     <p>
-                      Journalismus kostet zwar, doch wir wollen niemanden
-                      ausschliessen: Wenn Sie einen finanziellen Engpass haben
-                      sollten, können Sie Ihre Mitgliedschaft zu einem tieferen
-                      Preis
-                      <a href="{{prolong_url}}">verlängern</a>.
+                      In nur zwei Minuten wird so aus einem abrupten Ende ein fulminanter 
+                      Neustart. Und Sie stellen sicher, dass unser Journalismus eine Zukunft hat.
                     </p>
                     <p>
-                      Sollte uns hingegen ein Fehler unterlaufen sein, nehmen
-                      Sie bitte ebenfalls so schnell wie möglich Kontakt mit uns
-                      auf:
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >.
+                      Ihre Crew der Republik
                     </p>
                     <p>
-                      Wir würden uns freuen, Sie ein weiteres Jahr an Bord zu
-                      wissen. Und wenn Sie sich dagegen entscheiden, würden wir
-                      uns freuen, wenn Sie zu einem
-                      <a href="{{prolong_url}}"
-                        >späteren Zeitpunkt wieder vorbeischauten</a
-                      >.
+                      PS: Journalismus kostet zwar, doch wir wollen niemanden ausschliessen. Wenn Sie einen 
+                      begründeten finanziellen Engpass haben sollten, können Sie <a href="{{prolong_url}}">Ihren Mitgliedschaftsbeitrag selbst bestimmen</a>.
                     </p>
-                    <p>Herzlich</p>
-                    <p>Ihre Crew der Republik</p>
+                    <p>PPS: Halt, stopp, Sie haben Ihre Mitgliedschaft bereits bezahlt? Dann muss 
+                      uns ein Fehler unterlaufen sein. Nehmen Sie bitte so schnell wie möglich 
+                      Kontakt mit uns auf: <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>.
+                    </p>
+                    <p>PPPS: Falls Sie sich bewusst gegen das Bleiben entschieden haben, dann haben 
+                      wir eine letzte Bitte: Nennen Sie uns zum Abschied Ihre Gründe? Sie kennen uns 
+                      mittlerweile so gut, dass Ihnen womöglich etwas aufgefallen ist, was wir übersehen haben.
+                    </p>
                   </td>
                 </tr>
                 <tr>
