--- a/packages/backend-modules/mail/templates/membership_owner_prolong_abo_give_months_notice_0.html
+++ b/packages/backend-modules/mail/templates/membership_owner_prolong_abo_give_months_notice_0.html
@@ -43,60 +43,73 @@
                   <td style="padding: 20px">
                     <p>Guten Tag</p>
                     <p>
-                      Heute endet Ihr Republik-Abonnement. Herzlichen Dank für
-                      Ihr Interesse und Ihre Neugier bis hierhin!
+                      Heute endet Ihr Republik-Abonnement. In nur zwei Minuten können 
+                      Sie diesen unglücklichen Lauf der Dinge ändern: 
                     </p>
                     <p>
                       <a href="{{prolong_url}}"
-                        >Wir würden uns sehr freuen, wenn Sie weiter an Bord
-                        blieben</a
-                      >.
+                        >Jetzt an Bord bleiben!</a
+                      >
                     </p>
                     <p>
-                      Ganz gleich, ob Sie uns einmal pro Woche, einmal pro Monat
-                      oder einmal pro Jahr lesen – mit Ihrem Beitrag stärken Sie
-                      kritischen Journalismus, die vierte Gewalt und die
-                      Demokratie.
+                      Wir schreiben Ihnen so direkt, weil Ihr Beitrag für unsere 
+                      Arbeit überlebenswichtig ist.
                     </p>
                     <p>
-                      Wie Sie wissen, finanziert sich die Republik als
-                      unabhängiges und werbefreies Magazin über ihre Leserinnen
-                      und Leser: Es kommt also wirklich auf jede einzelne Person
-                      an.
+                      Die Republik finanziert sich durch ihre Leserinnen und Leser. 
+                      Jeder Beitrag macht einen Unterschied. 
                     </p>
-                    <p>Nun haben Sie die Wahl:</p>
-                    <ul>
-                      <li>
-                        <a href="{{prolong_url}}"
-                          >Sie bleiben weiterhin dabei mit der
-                          Jahresmitgliedschaft</a
-                        >: Hiermit erhalten Sie nicht nur von Montag bis Samstag
-                        unser Magazin, sondern werden auch Mitglied der Project
-                        R Genossenschaft und Teil unserer Verlagsetage.
-                      </li>
-                      <li>
-                        <a href="{{link_offer_monthly_abo}}"
-                          >Das Monatsabonnement</a
-                        >: Das kostet nur CHF 22 im Monat, wird Ihrer
-                        Kreditkarte belastet und verlängert sich automatisch –
-                        kann dabei aber jederzeit und ohne Frist gekündigt
-                        werden. Sie erhalten hierbei Zugriff auf das Magazin,
-                        sind aber nicht Teil der Genossenschaft.
-                      </li>
-                      <li>
-                        Wollen Sie die Republik nicht mehr lesen?
-                        <a href="{{cancel_url}}"
-                          >Kündigen Sie Ihre Mitgliedschaft und teilen Sie uns
-                          mit, warum</a
-                        >. Es wäre wertvoll für uns, Ihre Gründe zu kennen.
-                      </li>
-                    </ul>
                     <p>
-                      Sollten Sie nichts tun, verlieren Ihre Zugangsdaten am
-                      {{grace_end_date}} leider ihre Gültigkeit.
+                      Wenn genügend Menschen für unseren Journalismus zahlen, 
+                      können wir Politiker in die Pflicht nehmen, Expertinnen 
+                      interviewen, Menschen mit speziellen Geschichten zu Wort kommen 
+                      lassen, unsere App verbessern und den wohl höflichsten virtuellen 
+                      Gesprächsraum der Schweizer Medienlandschaft pflegen. Wenn nicht, 
+                      dann müssen wir das Feld den grossen Verlagen überlassen.
+                    </p>
+                    <p>
+                      Die Republik braucht Sie.
+                    </p>
+                    <table
+                      width="100%"
+                      border="0"
+                      cellspacing="0"
+                      cellpadding="0"
+                    >
+                      <tr>
+                        <td>
+                          <table border="0" cellspacing="0" cellpadding="0">
+                            <tr>
+                              <td align="center" bgcolor="#3CAD00">
+                                <a
+                                  href="https://www.republik.ch/angebote?goto=account"
+                                  style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;"
+                                  >Jetzt bezahlen!</a
+                                >
+                              </td>
+                            </tr>
+                          </table>
+                        </td>
+                      </tr>
+                    </table>
+                    <p>
+                      Sollten Sie nichts tun, verlieren Ihre Zugangsdaten am {{grace_end_date}} leider 
+                      ihre Gültigkeit. Das wäre sehr schade. Also lieber sofort dafür sorgen, 
+                      dass unsere gemeinsame Reise weitergeht {{prolong_url}}.
                     </p>
                     <p>Herzlich</p>
                     <p>Ihre Crew der Republik</p>
+                    <br>
+                    <br>
+                    <p>
+                      PS: Journalismus kostet zwar, doch wir wollen niemanden ausschliessen. Wenn Sie einen 
+                      begründeten finanziellen Engpass haben sollten, dann melden Sie sich bei uns: 
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>. Wir finden eine Lösung.
+                    </p>
+                    <p>PPS: Falls Sie sich bewusst gegen das Bleiben entschieden haben, dann haben 
+                      wir eine letzte Bitte: <a href="https://www.republik.ch/angebote?goto=account">Nennen Sie uns zum Abschied Ihre Gründe</a>? 
+                      Sie kennen uns mittlerweile so gut, dass Ihnen womöglich etwas aufgefallen ist, was wir übersehen haben.
+                    </p>
                   </td>
                 </tr>
                 <tr>
