feat(lobbywatch): donation receipt 2024

--- a/packages/backend-modules/mail/templates/de/donation_receipt.html
+++ b/packages/backend-modules/mail/templates/de/donation_receipt.html
@@ -71,28 +71,33 @@
                   <td style="padding: 20px">
                     <p>Guten Tag {{name}}</p>
                     <p>
-                      Ihre Zuwendungen an Lobbywatch.ch können Sie von den
-                      Steuern abziehen. Gerne senden wir Ihnen im Anhang eine
-                      Spendenbescheinigung für das vergangene Jahr.
-                    </p>
-
-                    <p>Vielen herzlichen Dank für Ihre Unterstützung!</p>
-
-                    <p>
-                      <strong>
-                        Unterstützen Sie uns auch im Wahljahr 2023?
-                      </strong>
+                      Sie haben im vergangenen Jahr Lobbywatch unterstützt –
+                      vielen herzlichen Dank!
                     </p>
 
                     <p>
-                      Die eidgenössischen Wahlen vom 22. Oktober bedeuten für
-                      uns viel Arbeit. Damit Sie als Wählerin oder Wähler eine
-                      informierte Entscheidung treffen können und nach den
-                      Wahlen wissen, wer im Bundeshaus wessen Interessen
-                      vertritt, müssen wir viel Zeit und Energie in die
-                      Recherchen der Lobbymandate investieren. Wir freuen uns,
-                      wenn Sie uns auch dieses Jahr dabei unterstützen, die
-                      Schweizer Politik transparenter zu machen.
+                      Ihre Zuwendungen können Sie von den Steuern abziehen.
+                      Gerne senden wir Ihnen im Anhang eine Spendenbescheinigung
+                      für das vergangene Jahr.
+                    </p>
+
+                    <p>
+                      <strong>Unterstützen Sie uns auch 2024?</strong>
+                    </p>
+
+                    <p>
+                      Nach den eigenässischen Wahlen wartet auf das Team von
+                      Lobbywatch viel Arbeit. Bereits haben wir für einen
+                      Grossteil der neu gewählten Parlametarierinnen und
+                      Parlamentarier deren Verbindungen zu Organisationen,
+                      Verbänden und Unternehmen recherchiert. Unsere Erfahrung
+                      zeigt: Sobald die neuen Ratsmitglieder im Bundeshaus
+                      richtig angekommen sind, beginnen die Lobbyorganisationen,
+                      sie für Posten in Vorständen und Verwaltungsräten zu
+                      rekrutieren. Die Arbeit wird uns deshalb auch dieses Jahr
+                      nicht ausgehen. Wir freuen uns dehsalb , wenn Sie uns auch
+                      dieses Jahr dabei unterstützen, die Schweizer Politik
+                      transparenter zu machen.
                     </p>
 
                     <p>
@@ -113,8 +118,8 @@
 
                     <p>
                       Mit freundlichen Grüssen<br />
-                      Deborah Wanner<br />
-                      Administratorin Lobbywatch.ch
+                      Thomas Angeli und Otto Hostettler<br />
+                      Co-Präsidenten
                     </p>
                   </td>
                 </tr>
