--- a/packages/backend-modules/mail/templates/fr/donation_receipt.html
+++ b/packages/backend-modules/mail/templates/fr/donation_receipt.html
@@ -69,32 +69,37 @@
               <tbody>
                 <tr>
                   <td style="padding: 20px">
-                    <p>Bonjour {{name}},</p>
+                    <p>Bonjour {{name}}</p>
                     <p>
-                      Vous pouvez déduire vos dons à Lobbywatch.ch de vos
-                      impôts. Nous vous envoyons volontiers en annexe une
-                      attestation de don pour l'année écoulée.
+                      Vous avez soutenu Lobbywatch l'année dernière - un grand
+                      merci !
                     </p>
 
-                    <p>Un grand merci pour votre soutien !</p>
+                    <p>
+                      Vous pouvez déduire vos dons de vos impôts. Veuillez
+                      trouvez ci-joint une attestation de don pour l'année
+                      écoulée.
+                    </p>
 
                     <p>
                       <strong>
-                        Nous soutiendrez-vous également lors des élections de
-                        2023 ?
+                        Nous soutiendrez-vous également en 2024 ?
                       </strong>
                     </p>
 
                     <p>
-                      Les élections fédérales du 22 octobre représentent pour
-                      nous beaucoup de travail. Pour que vous puissiez, en tant
-                      qu'électrice ou électeur, faire un choix éclairé et
-                      savoir, après les élections, qui défend les intérêts de
-                      qui au Palais fédéral, nous devons investir beaucoup de
-                      temps et d'énergie dans les recherches sur les mandats de
-                      lobbying. Nous serions heureux que vous nous aidiez cette
-                      année encore à rendre la politique suisse plus
-                      transparente.
+                      Après les élections nationales, l'équipe de Lobbywatch
+                      aura du pain sur la planche. Nous avons déjà analysé la
+                      plupart des nouveaux parlementaires et leurs liens avec
+                      des organisations, des associations et des entreprises.
+                      Notre expérience montre qu'une fois que les nouveaux
+                      parlementaires sont bien acclimaté au parlement,les
+                      organisations de lobbying commencent à les recruter pour
+                      des postes dans les comités et les conseils
+                      d'administration. Nous ne manquerons donc pas de travail
+                      cette année non plus. Nous vous remercions donc de bien
+                      vouloir nous aider cette année encore à rendre la
+                      politique suisse plus transparente.
                     </p>
 
                     <p>
@@ -115,8 +120,8 @@
 
                     <p>
                       Avec nos meilleures salutations<br />
-                      Deborah Wanner<br />
-                      Administratorin Lobbywatch.ch
+                      Thomas Angeli et Otto Hostettler<br />
+                      Co-présidents
                     </p>
                   </td>
                 </tr>
